Fixed button overflow styling

--- a/client/stylesheets/less/buttons.less
+++ b/client/stylesheets/less/buttons.less
@@ -5,6 +5,7 @@
     font-weight: 700;
     letter-spacing: 1px;
     font-size: 11px;
+    white-space: normal;
 }
 
 .btn-red {
